--- a/univariado_unistep/lstm.ipynb
+++ b/univariado_unistep/lstm.ipynb
@@ -13,7 +13,7 @@
     "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "class LSTMModel:\n",
-    "    def __init__(self, n_units: int, input_shape: tuple, learning_rate: float = 5e-5):\n",
+    "    def __init__(self, n_units: int, input_shape: tuple, output_shape: tuple, learning_rate: float = 5e-5):\n",
     "        \"\"\"\n",
     "        Initializes the LSTMModel with specified parameters.\n",
     "\n",
@@ -24,6 +24,7 @@
     "        \"\"\"\n",
     "        self.n_units = n_units\n",
     "        self.input_shape = input_shape\n",
+    "        self.output_shape = output_shape\n",
     "        self.learning_rate = learning_rate\n",
     "        self.model = self._build_model()\n",
     "\n",
@@ -39,7 +40,7 @@
     "        model.add(Dropout(0.2))  \n",
     "        model.add(LSTM(self.n_units))\n",
     "        model.add(Dropout(0.2))  \n",
-    "        model.add(Dense(1, activation='linear'))        \n",
+    "        model.add(Dense(self.output_shape, activation='linear'))        \n",
     "        model.compile(optimizer=self._get_optimizer(), loss=self.root_mean_squared_error)\n",
     "        \n",
     "        return model\n",
