--- a/univariado_unistep/plotter_class.ipynb
+++ b/univariado_unistep/plotter_class.ipynb
@@ -25,8 +25,37 @@
     "            self.ax.set_ylabel(ylabel)\n",
     "\n",
     "    def show(self):\n",
-    "        plt.legend()\n",
+    "        self.ax.legend()\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # import matplotlib.pyplot as plt\n",
+    "\n",
+    "# class Plotter:\n",
+    "#     def __init__(self, figsize=(16, 5)):\n",
+    "#         self.figsize = figsize\n",
+    "#         self.fig, self.ax = plt.subplots(figsize=self.figsize)\n",
+    "\n",
+    "#     def plot(self, x_data, y_data, label):\n",
+    "#         self.ax.plot(x_data, y_data, label=label)\n",
+    "\n",
+    "#     def configure(self, title=None, xlabel=None, ylabel=None):\n",
+    "#         if title:\n",
+    "#             self.ax.set_title(title)\n",
+    "#         if xlabel:\n",
+    "#             self.ax.set_xlabel(xlabel)\n",
+    "#         if ylabel:\n",
+    "#             self.ax.set_ylabel(ylabel)\n",
+    "\n",
+    "#     def show(self):\n",
+    "#         plt.legend()\n",
+    "#         plt.show()\n"
    ]
   }
  ],
