--- a/univariado_unistep/pipeline.ipynb
+++ b/univariado_unistep/pipeline.ipynb
@@ -25,25 +25,12 @@
     "class WeatherForecastingPipeline:\n",
     "    def __init__(self, config):\n",
     "        self.config = config\n",
-    "        self.plotter = Plotter()\n",
     "        self.data_scaler_manager = DataScalerManager()\n",
     "        self.lstm_model = None\n",
     "        self.scaler = None\n",
     "        self.data = None\n",
-    "\n",
-    "    def load_data(self):\n",
-    "        ts_data = TimeSeriesData(self.config['data_path'], self.config['file_name'])\n",
-    "        series = ts_data.df[self.config['target_column']]\n",
-    "        train, val, test = ts_data.train_val_test_split(series)\n",
-    "        self.data = {'train': train, 'val': val, 'test': test}\n",
-    "\n",
-    "    def plot_datasets(self):\n",
-    "        self.plotter.plot(self.data['train'], label='Train')\n",
-    "        self.plotter.plot(self.data['val'], label='Val')\n",
-    "        self.plotter.plot(self.data['test'], label='Test')\n",
-    "        self.plotter.configure(title='Weather Data', ylabel='Temperature (°C)')\n",
-    "        self.plotter.show()\n",
-    "\n",
+    "        self.y_test_pred = None\n",
+    "        \n",
     "    def create_supervised_data(self):\n",
     "        preprocessor = SupervisedDatasetCreator(self.config['input_length'], self.config['output_length'])\n",
     "        x_train, y_train = preprocessor.create_supervised_dataset(self.data['train'].values)\n",
@@ -55,16 +42,89 @@
     "            'x_val': x_val, 'y_val': y_val,\n",
     "            'x_test': x_test, 'y_test': y_test\n",
     "        })\n",
-    "\n",
-    "    def scale_data(self):\n",
-    "        scaled_data, self.scaler = self.data_scaler_manager.scale_data(self.data)\n",
-    "        self.data.update(scaled_data)\n",
-    "\n",
+    "                                \n",
     "    def build_model(self):\n",
     "        input_shape = (self.data['x_train'].shape[1], self.data['x_train'].shape[2])\n",
     "        lstm_model = LSTMModel(n_units=self.config['n_units'], input_shape=input_shape, output_shape=self.config['output_length'], learning_rate=self.config['learning_rate'])\n",
     "        self.lstm_model = lstm_model.model\n",
+    "        \n",
+    "    def evaluate_model(self):\n",
+    "        rmse_train = self.lstm_model.evaluate(self.data['x_train'], self.data['y_train'], verbose=0)\n",
+    "        rmse_val = self.lstm_model.evaluate(self.data['x_val'], self.data['y_val'], verbose=0)\n",
+    "        rmse_test = self.lstm_model.evaluate(self.data['x_test'], self.data['y_test'], verbose=0)\n",
     "\n",
+    "        print('RMSE Comparison:')\n",
+    "        print(f'  RMSE Train: {rmse_train:.3f}')\n",
+    "        print(f'  RMSE Val: {rmse_val:.3f}')\n",
+    "        print(f'  RMSE Test: {rmse_test:.3f}')\n",
+    "        \n",
+    "    def load_data(self):\n",
+    "        ts_data = TimeSeriesData(self.config['data_path'], self.config['file_name'])\n",
+    "        series = ts_data.df[self.config['target_column']]\n",
+    "        train, val, test = ts_data.train_val_test_split(series)\n",
+    "        self.data = {'train': train, 'val': val, 'test': test}\n",
+    "    \n",
+    "    def plot_datasets(self):\n",
+    "        plotter = Plotter()       \n",
+    "         \n",
+    "        plotter.plot(self.data['train'], label='Train')\n",
+    "        plotter.plot(self.data['val'], label='Val')\n",
+    "        plotter.plot(self.data['test'], label='Test')\n",
+    "        plotter.configure(title='Weather Data', ylabel='Temperature (°C)')\n",
+    "        plotter.show() \n",
+    "        \n",
+    "    def plot_predictions(self):\n",
+    "        plotter = Plotter()\n",
+    "        plotter.plot(self.data['test'].values, label='True')  \n",
+    "        plotter.plot(self.y_test_pred, label='Predicted')\n",
+    "        plotter.configure(title='True vs Predicted', xlabel='Time Steps', ylabel='Temperature (°C)')\n",
+    "        plotter.show()\n",
+    "        \n",
+    "    def plot_prediction_errors(self):\n",
+    "        N = len(self.y_test_pred)  \n",
+    "        ndato = np.linspace(1, N, N)\n",
+    "\n",
+    "        errores = self.data['y_test'].flatten() - self.y_test_pred\n",
+    "        plt.plot(ndato, errores)\n",
+    "        plt.xlabel('Índice de Predicción')\n",
+    "        plt.ylabel('Error de Predicción')\n",
+    "        plt.title('Errores de Predicción')\n",
+    "        plt.show()\n",
+    "        \n",
+    "    def plot_rmse_over_timesteps(self):\n",
+    "        y_test_pred_scaled = self.lstm_model.predict(self.data['x_test'], verbose=0)\n",
+    "        y_test_pred = self.scaler.inverse_transform(y_test_pred_scaled)\n",
+    "\n",
+    "        diff_cuad = np.square(self.data['y_test'].squeeze() - y_test_pred)\n",
+    "        proms = np.mean(diff_cuad, axis=0)\n",
+    "        rmse = np.sqrt(proms)\n",
+    "\n",
+    "        t = np.linspace(1, self.config['output_length'], self.config['output_length'])\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.scatter(t, rmse)\n",
+    "        ax.set_xlabel('Predicted Timestep')\n",
+    "        ax.set_ylabel('RMSE Error (°C)')\n",
+    "        plt.xticks(ticks=t, labels=t)\n",
+    "        plt.grid()\n",
+    "        plt.show()    \n",
+    "\n",
+    "    def plot_training_history(self, history):\n",
+    "        plotter = Plotter()\n",
+    "        \n",
+    "        plotter.plot(history.history['loss'], label='RMSE Train')\n",
+    "        plotter.plot(history.history['val_loss'], label='RMSE Val')\n",
+    "        plotter.configure(title='Epochs vs RMSE', xlabel='Epochs', ylabel='RMSE')\n",
+    "        plotter.show()        \n",
+    "        \n",
+    "    def predict(self, x):\n",
+    "        y_pred_scaled = self.lstm_model.predict(x, verbose=0)\n",
+    "        y_pred = self.scaler.inverse_transform(y_pred_scaled)\n",
+    "        self.y_test_pred = y_pred.flatten()\n",
+    "    \n",
+    "    def scale_data(self):\n",
+    "        scaled_data, self.scaler = self.data_scaler_manager.scale_data(self.data)\n",
+    "        self.data.update(scaled_data)\n",
+    "                \n",
     "    def train_model(self):\n",
     "        early_stopping = EarlyStopping(patience=6, restore_best_weights=True)\n",
     "        reduce_lr = ReduceLROnPlateau(factor=0.5, patience=3, min_lr=1e-7)\n",
@@ -79,58 +139,20 @@
     "        )\n",
     "\n",
     "        self.plot_training_history(history)\n",
-    "\n",
-    "    def plot_training_history(self, history):\n",
-    "        self.plotter.plot(history.history['loss'], label='RMSE Train')\n",
-    "        self.plotter.plot(history.history['val_loss'], label='RMSE Val')\n",
-    "        self.plotter.configure(title='Epochs vs RMSE', xlabel='Epochs', ylabel='RMSE')\n",
-    "        self.plotter.show()\n",
-    "\n",
-    "    def evaluate_model(self):\n",
-    "        rmse_train = self.lstm_model.evaluate(self.data['x_train'], self.data['y_train'], verbose=0)\n",
-    "        rmse_val = self.lstm_model.evaluate(self.data['x_val'], self.data['y_val'], verbose=0)\n",
-    "        rmse_test = self.lstm_model.evaluate(self.data['x_test'], self.data['y_test'], verbose=0)\n",
-    "\n",
-    "        print('RMSE Comparison:')\n",
-    "        print(f'  RMSE Train: {rmse_train:.3f}')\n",
-    "        print(f'  RMSE Val: {rmse_val:.3f}')\n",
-    "        print(f'  RMSE Test: {rmse_test:.3f}')\n",
-    "\n",
-    "    def predict(self, x):\n",
-    "        y_pred_scaled = self.lstm_model.predict(x, verbose=0)\n",
-    "        y_pred = self.scaler.inverse_transform(y_pred_scaled)\n",
-    "        return y_pred.flatten()\n",
-    "\n",
-    "    def plot_rmse_over_timesteps(self):\n",
-    "        y_test_pred_scaled = self.lstm_model.predict(self.data['x_test'], verbose=0)\n",
-    "        y_test_pred = self.scaler.inverse_transform(y_test_pred_scaled)\n",
-    "\n",
-    "        diff_cuad = np.square(self.data['y_test'].squeeze() - y_test_pred)\n",
-    "        proms = np.mean(diff_cuad, axis=0)\n",
-    "        rmse = np.sqrt(proms)\n",
-    "\n",
-    "        # t = np.linspace(1, 4, 4)\n",
-    "        t = np.linspace(1, self.config['output_length'], self.config['output_length'])\n",
-    "\n",
-    "        fig, ax = plt.subplots()\n",
-    "        ax.scatter(t, rmse)\n",
-    "        ax.set_xlabel('Predicted Timestep')\n",
-    "        ax.set_ylabel('RMSE Error (°C)')\n",
-    "        plt.xticks(ticks=t, labels=t)\n",
-    "        plt.grid()\n",
-    "        plt.show()\n",
     "        \n",
     "    def run(self):\n",
     "        self.load_data()\n",
     "        self.plot_datasets()\n",
-    "        self.create_supervised_data()\n",
     "        self.scale_data()\n",
+    "        self.create_supervised_data()\n",
     "        self.build_model()\n",
     "        self.train_model()\n",
     "        self.evaluate_model()\n",
-    "        self.plot_rmse_over_timesteps()\n",
-    "        \n",
-    "        return self.lstm_model"
+    "        self.predict(self.data['x_test'])\n",
+    "        self.plot_predictions()\n",
+    "        self.plot_prediction_errors()\n",
+    "        if self.config['output_length'] > 1:\n",
+    "            self.plot_rmse_over_timesteps()"
    ]
   }
  ],
