--- a/univariado_unistep/dataset_scaler.ipynb
+++ b/univariado_unistep/dataset_scaler.ipynb
@@ -22,7 +22,7 @@
     "        self.scalers = []\n",
     "        \n",
     "        \n",
-    "    def escalar_dataset(self, data_input):\n",
+    "    def escalar_dataset(self, data_input, col_ref):      \n",
     "        NFEATS = data_input['x_train'].shape[2]        \n",
     "\n",
     "        scalers = [MinMaxScaler(feature_range=(-1,1)) for i in range(NFEATS)]\n",
@@ -38,9 +38,9 @@
     "            x_val_s[:,:,i] = scalers[i].transform(data_input['x_val'][:,:,i])\n",
     "            x_test_s[:,:,i] = scalers[i].transform(data_input['x_test'][:,:,i])\n",
     "        \n",
-    "        y_train_s[:,:,0] = scalers[-1].fit_transform(data_input['y_train'][:,:,0])\n",
-    "        y_val_s[:,:,0] = scalers[-1].transform(data_input['y_val'][:,:,0])\n",
-    "        y_test_s[:,:,0] = scalers[-1].transform(data_input['y_test'][:,:,0])\n",
+    "        y_train_s[:,:,0] = scalers[col_ref].fit_transform(data_input['y_train'][:,:,0])\n",
+    "        y_val_s[:,:,0] = scalers[col_ref].transform(data_input['y_val'][:,:,0])\n",
+    "        y_test_s[:,:,0] = scalers[col_ref].transform(data_input['y_test'][:,:,0])\n",
     "\n",
     "        data_scaled = {\n",
     "            'x_train': x_train_s, 'y_train': y_train_s,\n",
@@ -48,7 +48,7 @@
     "            'x_test': x_test_s, 'y_test': y_test_s,\n",
     "        }\n",
     "\n",
-    "        return data_scaled, scalers[0]"
+    "        return data_scaled, scalers[col_ref]"
    ]
   }
  ],
