--- a/univariado_unistep/dataset_scaler_manager.ipynb
+++ b/univariado_unistep/dataset_scaler_manager.ipynb
@@ -18,7 +18,7 @@
     "        \"\"\"\n",
     "        self.scaler = DatasetScaler(feature_range)\n",
     "\n",
-    "    def scale_data(self, data_in: dict) -> dict:\n",
+    "    def scale_data(self, data_in: dict, col_ref) -> dict:\n",
     "        \"\"\"\n",
     "        Scales the input datasets.\n",
     "\n",
@@ -28,7 +28,7 @@
     "        Returns:\n",
     "        - A dictionary with the scaled datasets.\n",
     "        \"\"\"\n",
-    "        scaled_data, scalers = self.scaler.escalar_dataset(data_in)\n",
+    "        scaled_data, scalers = self.scaler.escalar_dataset(data_in, col_ref)\n",
     "        return scaled_data, scalers\n",
     "\n",
     "    def print_min_max(self, original_data: dict, scaled_data: dict) -> None:\n",
