--- a/univariado_unistep/weather_pipeline.ipynb
+++ b/univariado_unistep/weather_pipeline.ipynb
@@ -86,9 +86,9 @@
     "\n",
     "        errores = self.data['y_test'].flatten() - self.y_test_pred\n",
     "        plt.plot(ndato, errores)\n",
-    "        plt.xlabel('Índice de Predicción')\n",
-    "        plt.ylabel('Error de Predicción')\n",
-    "        plt.title('Errores de Predicción')\n",
+    "        plt.xlabel('Prediction index')\n",
+    "        plt.ylabel('Prediction error')\n",
+    "        plt.title('Prediction errors')\n",
     "        plt.show()\n",
     "        \n",
     "    def plot_rmse_over_timesteps(self):\n",
@@ -107,24 +107,24 @@
     "        plt.xticks(ticks=t, labels=t)\n",
     "        plt.grid()\n",
     "        plt.show()    \n",
-    "\n",
+    "        \n",
     "    def plot_training_history(self, history):\n",
     "        plotter = Plotter()\n",
     "        \n",
     "        plotter.plot(history.history['loss'], label='RMSE Train')\n",
     "        plotter.plot(history.history['val_loss'], label='RMSE Val')\n",
     "        plotter.configure(title='Epochs vs RMSE', xlabel='Epochs', ylabel='RMSE')\n",
-    "        plotter.show()        \n",
+    "        plotter.show()  \n",
     "        \n",
     "    def predict(self, x):\n",
     "        y_pred_scaled = self.lstm_model.predict(x, verbose=0)\n",
     "        y_pred = self.scaler.inverse_transform(y_pred_scaled)\n",
     "        self.y_test_pred = y_pred.flatten()\n",
-    "    \n",
+    "        \n",
     "    def scale_data(self):\n",
     "        scaled_data, self.scaler = self.data_scaler_manager.scale_data(self.data)\n",
     "        self.data.update(scaled_data)\n",
-    "                \n",
+    "        \n",
     "    def train_model(self):\n",
     "        early_stopping = EarlyStopping(patience=6, restore_best_weights=True)\n",
     "        reduce_lr = ReduceLROnPlateau(factor=0.5, patience=3, min_lr=1e-7)\n",
@@ -143,8 +143,8 @@
     "    def run(self):\n",
     "        self.load_data()\n",
     "        self.plot_datasets()\n",
-    "        self.scale_data()\n",
     "        self.create_supervised_data()\n",
+    "        self.scale_data()\n",
     "        self.build_model()\n",
     "        self.train_model()\n",
     "        self.evaluate_model()\n",
