--- a/univariado_unistep/dataset_creator.ipynb
+++ b/univariado_unistep/dataset_creator.ipynb
@@ -10,16 +10,10 @@
     "from typing import Tuple\n",
     "\n",
     "class SupervisedDatasetCreator:\n",
-    "    def __init__(self, input_length: int, output_length: int):\n",
-    "        \"\"\"\n",
-    "        Initializes the SupervisedDatasetCreator instance with specified input and output lengths.\n",
-    "\n",
-    "        Parameters:\n",
-    "        - input_length: Number of consecutive time steps used for input to the model.\n",
-    "        - output_length: Number of time steps to predict (output of the model).\n",
-    "        \"\"\"\n",
+    "    def __init__(self, input_length: int, output_length: int, target_column_index: int):\n",
     "        self.input_length = input_length\n",
     "        self.output_length = output_length\n",
+    "        self.target_column_index = target_column_index\n",
     "        \n",
     "    def create_supervised_dataset(self, array: np.ndarray) -> Tuple[np.ndarray, np.ndarray]:\n",
     "        X, Y = [], []    \n",
@@ -32,7 +26,7 @@
     "\n",
     "        for i in range(fils-self.input_length-self.output_length):\n",
     "            X.append(array[i:i+self.input_length,0:cols])\n",
-    "            Y.append(array[i+self.input_length:i+self.input_length+self.output_length,-1].reshape(self.output_length,1))\n",
+    "            Y.append(array[i+self.input_length:i+self.input_length+self.output_length, self.target_column_index].reshape(self.output_length,1))\n",
     "        \n",
     "        X = np.array(X)\n",
     "        Y = np.array(Y)\n",
