--- a/univariado_unistep/weather_pipeline.ipynb
+++ b/univariado_unistep/weather_pipeline.ipynb
@@ -6,6 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "# from ipynb.fs.full.plotter_class import Plotter\n",
+    "# from ipynb.fs.full.time_series_data import TimeSeriesData\n",
+    "# from ipynb.fs.full.dataset_creator import SupervisedDatasetCreator\n",
+    "# from ipynb.fs.full.dataset_scaler_manager import DataScalerManager\n",
+    "# from ipynb.fs.full.lstm import LSTMModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
@@ -13,15 +29,8 @@
     "from ipynb.fs.full.time_series_data import TimeSeriesData\n",
     "from ipynb.fs.full.dataset_creator import SupervisedDatasetCreator\n",
     "from ipynb.fs.full.dataset_scaler_manager import DataScalerManager\n",
-    "from ipynb.fs.full.lstm import LSTMModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from ipynb.fs.full.lstm import LSTMModel\n",
+    "\n",
     "class WeatherPipeline:\n",
     "    def __init__(self, config):\n",
     "        self.config = config\n",
@@ -33,9 +42,12 @@
     "        self.data = None\n",
     "        self.dataset = None\n",
     "        self.y_test_pred = None\n",
+    "                       \n",
+    "    def create_supervised_data(self):            \n",
+    "        target_column_name = self.config['column_target']\n",
+    "        target_column_index = self.data['test'].columns.get_loc(self.config['column_target'])\n",
     "        \n",
-    "    def create_supervised_data(self):\n",
-    "        preprocessor = SupervisedDatasetCreator(self.config['input_length'], self.config['output_length'])\n",
+    "        preprocessor = SupervisedDatasetCreator(self.config['input_length'], self.config['output_length'], target_column_index)\n",
     "        x_train, y_train = preprocessor.create_supervised_dataset(self.data['train'].values)\n",
     "        x_val, y_val = preprocessor.create_supervised_dataset(self.data['val'].values)\n",
     "        x_test, y_test = preprocessor.create_supervised_dataset(self.data['test'].values)\n",
@@ -81,45 +93,12 @@
     "        \"\"\"\n",
     "        Plots subplots for each variable in the dataset with corresponding legends and titles.\n",
     "        \"\"\"\n",
-    "        num_variables = len(self.data['train'].columns)\n",
-    "        variables = self.data['train'].columns\n",
-    "        \n",
-    "        fig, axes = plt.subplots(num_variables, 1, figsize=(12, 4 * num_variables), sharex=True)\n",
-    "        \n",
-    "        if num_variables == 1:\n",
-    "            axes = [axes]  \n",
-    "        \n",
-    "        for i, var in enumerate(variables):\n",
-    "            ax = axes[i]\n",
-    "            ax.plot(self.data['train'][var], label='Train')\n",
-    "            ax.plot(self.data['val'][var], label='Val')\n",
-    "            ax.plot(self.data['test'][var], label='Test')\n",
-    "            \n",
-    "            ax.set_title(f'{var} over Time')\n",
-    "            ax.set_ylabel(var)\n",
-    "            ax.legend()\n",
-    "        \n",
-    "        axes[-1].set_xlabel('Time')\n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "    \n",
-    "            \n",
-    "            \n",
-    "    \n",
-    "    # def plot_datasets(self):\n",
-    "    #     plotter = Plotter()               \n",
-    "    #     plotter.plot(self.data['train'], label='Train')\n",
-    "    #     plotter.plot(self.data['val'], label='Val')\n",
-    "    #     plotter.plot(self.data['test'], label='Test')\n",
-    "    #     plotter.configure(title='Weather Data', ylabel='Temperature (°C)')\n",
-    "    #     plotter.show() \n",
-    "        \n",
-    "    # def plot_predictions(self):\n",
-    "    #     plotter = Plotter()\n",
-    "    #     plotter.plot(self.data['test'].values, label='True')  \n",
-    "    #     plotter.plot(self.y_test_pred, label='Predicted')\n",
-    "    #     plotter.configure(title='True vs Predicted', xlabel='Time Steps', ylabel='Temperature (°C)')\n",
-    "    #     plotter.show()\n",
+    "        fig, ax = plt.subplots(figsize = (16,5))\n",
+    "        ax.plot(self.data['train'][self.config['column_target']], label='Train')\n",
+    "        ax.plot(self.data['val'][self.config['column_target']], label='Val')\n",
+    "        ax.plot(self.data['test'][self.config['column_target']], label='Test')\n",
+    "        ax.set_title(f'{self.config[\"column_target\"]} over Time')\n",
+    "        plt.legend()\n",
     "        \n",
     "    def plot_predictions(self):\n",
     "        column_target = self.config['column_target']      \n",
@@ -239,7 +218,8 @@
     "    def run(self):\n",
     "        self.read_file()\n",
     "        self.drop_columns(['datetime'])\n",
-    "        # self.feature_engineering()\n",
+    "        if self.config['feature_engineering']:\n",
+    "            self.feature_engineering\n",
     "        self.split_data()\n",
     "        if self.config['plot']:\n",
     "            self.plot_datasets()        \n",
@@ -256,6 +236,249 @@
     "            self.plot_predictions()\n",
     "            if self.config['output_length'] > 1:\n",
     "                self.plot_rmse_over_timesteps()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class WeatherPipeline:\n",
+    "#     def __init__(self, config):\n",
+    "#         self.config = config\n",
+    "#         self.data_scaler_manager = DataScalerManager()\n",
+    "#         self.ts_data = TimeSeriesData(self.config['data_path'], self.config['file_name'])\n",
+    "#         self.column_target = self.config['column_target']\n",
+    "#         self.lstm_model = None\n",
+    "#         self.scaler = None\n",
+    "#         self.data = None\n",
+    "#         self.dataset = None\n",
+    "#         self.y_test_pred = None\n",
+    "        \n",
+    "#     def create_supervised_data(self):\n",
+    "#         preprocessor = SupervisedDatasetCreator(self.config['input_length'], self.config['output_length'])\n",
+    "#         x_train, y_train = preprocessor.create_supervised_dataset(self.data['train'].values)\n",
+    "#         x_val, y_val = preprocessor.create_supervised_dataset(self.data['val'].values)\n",
+    "#         x_test, y_test = preprocessor.create_supervised_dataset(self.data['test'].values)\n",
+    "\n",
+    "#         self.data.update({\n",
+    "#             'x_train': x_train, 'y_train': y_train,\n",
+    "#             'x_val': x_val, 'y_val': y_val,\n",
+    "#             'x_test': x_test, 'y_test': y_test\n",
+    "#         })\n",
+    "                                \n",
+    "#     def build_model(self):\n",
+    "#         input_shape = (self.data['x_train'].shape[1], self.data['x_train'].shape[2])\n",
+    "#         lstm_model = LSTMModel(n_units=self.config['n_units'], input_shape=input_shape, output_shape=self.config['output_length'], learning_rate=self.config['learning_rate'])\n",
+    "#         self.lstm_model = lstm_model.model   \n",
+    "        \n",
+    "#     def drop_column(self, column):\n",
+    "#         return self.dataset.drop(column, axis=1)\n",
+    "    \n",
+    "#     def drop_columns(self, columns):\n",
+    "#         for column in columns:\n",
+    "#             self.dataset = self.drop_column(column)\n",
+    "        \n",
+    "#     def evaluate_model(self):\n",
+    "#         rmse_train = self.lstm_model.evaluate(self.data['x_train'], self.data['y_train'], verbose=0)\n",
+    "#         rmse_val = self.lstm_model.evaluate(self.data['x_val'], self.data['y_val'], verbose=0)\n",
+    "#         rmse_test = self.lstm_model.evaluate(self.data['x_test'], self.data['y_test'], verbose=0)\n",
+    "\n",
+    "#         print('RMSE Comparison:')\n",
+    "#         print(f'  RMSE Train: {rmse_train:.3f}')\n",
+    "#         print(f'  RMSE Val: {rmse_val:.3f}')\n",
+    "#         print(f'  RMSE Test: {rmse_test:.3f}')\n",
+    "    \n",
+    "#     def feature_engineering(self):\n",
+    "#         w_dir = self.dataset['wd (deg)'] * np.pi / 180    \n",
+    "#         Wx = self.dataset['wv (m/s)'] * np.cos(w_dir)\n",
+    "#         Wy = self.dataset['wv (m/s)'] * np.sin(w_dir)\n",
+    "        \n",
+    "#         self.dataset = self.dataset.drop(columns=['wd (deg)', 'wv (m/s)', 'max. wv (m/s)'])    \n",
+    "#         self.dataset['Wx'] = Wx\n",
+    "#         self.dataset['Wy'] = Wy\n",
+    "        \n",
+    "#     def plot_datasets(self):\n",
+    "#         \"\"\"\n",
+    "#         Plots subplots for each variable in the dataset with corresponding legends and titles.\n",
+    "#         \"\"\"\n",
+    "#         num_variables = len(self.data['train'].columns)\n",
+    "#         variables = self.data['train'].columns\n",
+    "        \n",
+    "#         fig, axes = plt.subplots(num_variables, 1, figsize=(12, 4 * num_variables), sharex=True)\n",
+    "        \n",
+    "#         if num_variables == 1:\n",
+    "#             axes = [axes]  \n",
+    "        \n",
+    "#         for i, var in enumerate(variables):\n",
+    "#             ax = axes[i]\n",
+    "#             ax.plot(self.data['train'][var], label='Train')\n",
+    "#             ax.plot(self.data['val'][var], label='Val')\n",
+    "#             ax.plot(self.data['test'][var], label='Test')\n",
+    "            \n",
+    "#             ax.set_title(f'{var} over Time')\n",
+    "#             ax.set_ylabel(var)\n",
+    "#             ax.legend()\n",
+    "        \n",
+    "#         axes[-1].set_xlabel('Time')\n",
+    "#         plt.tight_layout()\n",
+    "#         plt.show()\n",
+    "    \n",
+    "            \n",
+    "            \n",
+    "    \n",
+    "#     # def plot_datasets(self):\n",
+    "#     #     plotter = Plotter()               \n",
+    "#     #     plotter.plot(self.data['train'], label='Train')\n",
+    "#     #     plotter.plot(self.data['val'], label='Val')\n",
+    "#     #     plotter.plot(self.data['test'], label='Test')\n",
+    "#     #     plotter.configure(title='Weather Data', ylabel='Temperature (°C)')\n",
+    "#     #     plotter.show() \n",
+    "        \n",
+    "#     # def plot_predictions(self):\n",
+    "#     #     plotter = Plotter()\n",
+    "#     #     plotter.plot(self.data['test'].values, label='True')  \n",
+    "#     #     plotter.plot(self.y_test_pred, label='Predicted')\n",
+    "#     #     plotter.configure(title='True vs Predicted', xlabel='Time Steps', ylabel='Temperature (°C)')\n",
+    "#     #     plotter.show()\n",
+    "        \n",
+    "#     def plot_predictions(self):\n",
+    "#         column_target = self.config['column_target']      \n",
+    "#         plotter = Plotter()\n",
+    "#         plotter.plot(self.data['test'][column_target].values, label='True')\n",
+    "#         plotter.plot(self.y_test_pred, label='Predicted')\n",
+    "#         plotter.configure(title=f'True vs Predicted for {column_target}', xlabel='Time Steps', ylabel=column_target)\n",
+    "#         plotter.show()\n",
+    "        \n",
+    "#     def plot_prediction_errors(self):\n",
+    "#         N = len(self.y_test_pred)  \n",
+    "#         ndato = np.linspace(1, N, N)\n",
+    "\n",
+    "#         errores = self.data['y_test'].flatten() - self.y_test_pred\n",
+    "#         plt.plot(ndato, errores)\n",
+    "#         plt.xlabel('Prediction index')\n",
+    "#         plt.ylabel('Prediction error')\n",
+    "#         plt.title('Prediction errors')\n",
+    "#         plt.show()\n",
+    "        \n",
+    "#     def plot_rmse_over_timesteps(self):\n",
+    "#         y_test_pred_scaled = self.lstm_model.predict(self.data['x_test'], verbose=0)\n",
+    "#         y_test_pred = self.scaler.inverse_transform(y_test_pred_scaled)\n",
+    "\n",
+    "#         diff_cuad = np.square(self.data['y_test'].squeeze() - y_test_pred)\n",
+    "#         proms = np.mean(diff_cuad, axis=0)\n",
+    "#         rmse = np.sqrt(proms)\n",
+    "\n",
+    "#         t = np.linspace(1, self.config['output_length'], self.config['output_length'])\n",
+    "#         fig, ax = plt.subplots()\n",
+    "#         ax.scatter(t, rmse)\n",
+    "#         ax.set_xlabel('Predicted Timestep')\n",
+    "#         ax.set_ylabel('RMSE Error (°C)')\n",
+    "#         plt.xticks(ticks=t, labels=t)\n",
+    "#         plt.grid()\n",
+    "#         plt.show()    \n",
+    "        \n",
+    "#     def plot_training_history(self, history):\n",
+    "#         plotter = Plotter()\n",
+    "        \n",
+    "#         plotter.plot(history.history['loss'], label='RMSE Train')\n",
+    "#         plotter.plot(history.history['val_loss'], label='RMSE Val')\n",
+    "#         plotter.configure(title='Epochs vs RMSE', xlabel='Epochs', ylabel='RMSE')\n",
+    "#         plotter.show()  \n",
+    "        \n",
+    "#     def predict(self, x):\n",
+    "#         y_pred_scaled = self.lstm_model.predict(x, verbose=0)\n",
+    "#         y_pred = self.scaler.inverse_transform(y_pred_scaled)\n",
+    "#         self.y_test_pred = y_pred.flatten()\n",
+    "        \n",
+    "#     def read_file(self):\n",
+    "#         ts_data = TimeSeriesData(self.config['data_path'], self.config['file_name'])\n",
+    "        \n",
+    "#         if 'columns_dataset' in self.config and self.config['columns_dataset']:\n",
+    "#             series = ts_data.df[self.config['columns_dataset']]\n",
+    "#         else:\n",
+    "#             series = ts_data.df  \n",
+    "        \n",
+    "#         self.dataset = series\n",
+    "    \n",
+    "#     def split_data(self):\n",
+    "#         train, val, test = self.ts_data.train_val_test_split(self.dataset)\n",
+    "#         self.data = {'train': train, 'val': val, 'test': test}\n",
+    "        \n",
+    "#     def scale_data(self):        \n",
+    "#         col_ref = self.dataset.columns.get_loc(self.column_target)  \n",
+    "#         scaled_data, self.scaler = self.data_scaler_manager.scale_data(self.data, col_ref)\n",
+    "#         self.data.update(scaled_data)\n",
+    "        \n",
+    "#     def train_model(self):\n",
+    "#         early_stopping = EarlyStopping(patience=6, restore_best_weights=True)\n",
+    "#         reduce_lr = ReduceLROnPlateau(factor=0.5, patience=3, min_lr=1e-7)\n",
+    "\n",
+    "#         history = self.lstm_model.fit(\n",
+    "#             self.data['x_train'], self.data['y_train'],\n",
+    "#             epochs=self.config['epochs'],\n",
+    "#             batch_size=self.config['batch_size'],\n",
+    "#             validation_data=(self.data['x_val'], self.data['y_val']),\n",
+    "#             callbacks=[early_stopping, reduce_lr],\n",
+    "#             verbose=2\n",
+    "#         )\n",
+    "\n",
+    "#         self.plot_training_history(history)\n",
+    "                \n",
+    "#     def plot_violin_plots(self, x_train=None, x_val=None, x_test=None, y_train=None, y_val=None, y_test=None, feature_names=None, figsize=(12, 4)):\n",
+    "#         fig, ax = plt.subplots(figsize=figsize)\n",
+    "        \n",
+    "#         if x_train is not None and x_val is not None and x_test is not None and feature_names is not None:\n",
+    "#             num_features = x_train.shape[2]\n",
+    "            \n",
+    "#             for i in range(num_features):\n",
+    "#                 train_data = x_train[:, :, i].flatten()\n",
+    "#                 val_data = x_val[:, :, i].flatten()\n",
+    "#                 test_data = x_test[:, :, i].flatten()\n",
+    "                \n",
+    "#                 ax.violinplot(dataset=train_data, positions=[i], showmeans=True, showmedians=True)\n",
+    "#                 ax.violinplot(dataset=val_data, positions=[i], showmeans=True, showmedians=True)\n",
+    "#                 ax.violinplot(dataset=test_data, positions=[i], showmeans=True, showmedians=True)\n",
+    "            \n",
+    "#             ax.set_xticks(list(range(num_features)))\n",
+    "#             ax.set_xticklabels(feature_names, rotation=90)\n",
+    "        \n",
+    "#         elif y_train is not None and y_val is not None and y_test is not None:\n",
+    "#             ax.violinplot(dataset=y_train.flatten(), positions=[0], showmeans=True, showmedians=True)\n",
+    "#             ax.violinplot(dataset=y_val.flatten(), positions=[1], showmeans=True, showmedians=True)\n",
+    "#             ax.violinplot(dataset=y_test.flatten(), positions=[2], showmeans=True, showmedians=True)\n",
+    "            \n",
+    "#             ax.set_xticks([0, 1, 2])\n",
+    "#             ax.set_xticklabels(['Train', 'Val', 'Test'])\n",
+    "        \n",
+    "#         else:\n",
+    "#             raise ValueError(\"Invalid input: Provide either x_train, x_val, x_test, and feature_names or y_train, y_val, and y_test.\")\n",
+    "        \n",
+    "#         ax.autoscale()        \n",
+    "#         plt.show()\n",
+    "                    \n",
+    "#     def run(self):\n",
+    "#         self.read_file()\n",
+    "#         self.drop_columns(['datetime'])\n",
+    "#         if self.config['feature_engineering']:\n",
+    "#             self.feature_engineering\n",
+    "#         self.split_data()\n",
+    "#         if self.config['plot']:\n",
+    "#             self.plot_datasets()        \n",
+    "#         self.create_supervised_data()\n",
+    "#         self.scale_data()\n",
+    "#         if self.config['plot']:\n",
+    "#             self.plot_violin_plots(x_train=self.data['x_train'], x_val=self.data['x_val'], x_test=self.data['x_test'], feature_names=self.dataset.keys())\n",
+    "#             self.plot_violin_plots(y_train=self.data['y_train'], y_val=self.data['y_val'], y_test=self.data['y_test'])\n",
+    "#         self.build_model()\n",
+    "#         self.train_model()\n",
+    "#         self.evaluate_model()\n",
+    "#         self.predict(self.data['x_test'])\n",
+    "#         if self.config['plot']:\n",
+    "#             self.plot_predictions()\n",
+    "#             if self.config['output_length'] > 1:\n",
+    "#                 self.plot_rmse_over_timesteps()"
    ]
   }
  ],
