--- a/autoarima/autoarima.ipynb
+++ b/autoarima/autoarima.ipynb
@@ -581,7 +581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
