--- a/NEW/eemd-lstm.ipynb
+++ b/NEW/eemd-lstm.ipynb
@@ -10,13 +10,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import emd\n",
+    "from scipy.optimize import minimize\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.metrics import mean_absolute_percentage_error\n",
     "from keras.models import Sequential\n",
     "from keras.layers import LSTM, Dense\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from scipy.optimize import minimize"
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
