--- a/NEW/eemd-arima.ipynb
+++ b/NEW/eemd-arima.ipynb
@@ -701,18 +701,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_subset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE (Ajustado) = 6.0738047480167445 \n",
+      "MAPE (Ajustado) = 9953223400651.959\n"
+     ]
+    }
+   ],
    "source": [
     "# Calcular métricas ajustadas\n",
     "MAE_EEMD_ARIMA_adjusted = mean_absolute_error(test, imf_eemd_fc_adjusted)\n",
